--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Eric Phillips</title>
+    <title>Reversal: A Coding Project By Eric Phillips</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="#"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
-                alt="mark" width="30" height="30"> FASTCASH</a>
+                alt="mark" width="30" height="30"> REVERSAL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/ephillips-tx/FastCash/settings">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/ephillips-tx/Rewind">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://ewp-portfolio.netlify.com/#about">About</a>
@@ -53,11 +53,9 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">App Name: A Coding Project</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">REVERSAL: A Coding Project</h1>
                     <h4 class="lead">
-                        Count CASH one loop at a time. A javascript coding exercise utilizing loops. Write a
-                        program that displays the numbers from 0 to 100. Apend a "$" symbol before each number. 
-                        Display the even numbers in <strong>BOLD.</strong>
+                        There and back again. A javascript coding exercise using arrawys. Write a program that displays a string in reverse.
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -82,9 +80,9 @@
                         </div>
                     </h5>
                 </div>
-                <div class="col">
-                    <img src="img/FastMoney.png" class="img-fluid center-block d-block mx-auto" 
-                    alt="App logo" width="700" height="500">
+                <div class="col d-flex align-items-center">
+                    <img src="img/REVERSE.png" class="img-fluid center-block d-block mx-auto" 
+                    alt="Reverse logo" width="700" height="500">
                 </div>
             </div>
         </div>
