--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Eric Phillips</title>
+    <title>Reversal: A Coding Project By Eric Phillips</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="#"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
-                alt="mark" width="30" height="30"> FASTCASH</a>
+                alt="mark" width="30" height="30"> REVERSAL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,16 +30,16 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="app.html">The App</a>
+                        <a class="nav-link active" aria-current="page" href="app.html">The App</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/ephillips-tx/FastCash/settings">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/ephillips-tx/Rewind">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://ewp-portfolio.netlify.com/#about">About</a>
@@ -50,8 +50,35 @@
     </nav>
     <!-- MAIN SECTION -->
     <main class="flex-shrink-0">
-        <div class="container">
-
+        <div class="container mt-5">
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">
+                        REVERSAL: A CODING PROJECT
+                    </h1>
+                    <h4 class="lead pb-3">
+                        There and back again. A javascript coding exercise using arrawys. Write a program that displays a string in reverse. 
+                    </h4>
+                </div>
+                <div class="col">
+                    <h5 class="border-1 border-bottom border-danger">Enter a String to Reverse</h5>
+                    <form class="row gx-3 gy-2">
+                        <div class="col">
+                            <input id="userString" type="text" class="form-control" placeholder="Enter a string..." aria-label="Enter a string">
+                        </div>
+                        <div class="col-12">
+                            <button type="button" id="submit" class="btn btn-danger">Reverse it!</button>
+                        </div>
+                        <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
+                            <h4 class="alert-heading">Reversal Complete.</h4>
+                            <hr>
+                            <p class="mb-0" id="msg">
+                                <!-- Insert message here. -->
+                            </p>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
     <!-- FOOTER SECTION -->
