--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
+    <!-- Google Fonts for Black Ops One -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+
     <link href="css/site.css" rel="stylesheet">
     <link href="img/blk-favicon-32x32.png" rel="icon" type="image/png">
 </head>
@@ -21,7 +26,7 @@
     <!-- NAV SECTION -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand logoFont" href="#"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
+            <a class="navbar-brand logoFont" href="index.html"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
                 alt="mark" width="30" height="30"> REVERSAL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,9 +58,10 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">REVERSAL: A Coding Project</h1>
+                    <h1 class="display-6 fw-bold lh-1 mb-3"><span class="logoFont">REVERSAL</span>: A Coding Project</h1>
                     <h4 class="lead">
-                        There and back again. A javascript coding exercise using arrawys. Write a program that displays a string in reverse.
+                        Sometimes it helps to work backwards. A javascript coding exercise using arrays. Write a program that 
+                        takes a string from the user and presents the string back to the user in reverse.
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li class=""><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
