--- a/app.html
+++ b/app.html
@@ -13,6 +13,11 @@
 
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
+    <!-- Google Fonts for Black Ops One -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
+
     <link href="css/site.css" rel="stylesheet">
     <link href="img/blk-favicon-32x32.png" rel="icon" type="image/png">
 </head>
@@ -21,7 +26,7 @@
     <!-- NAV SECTION -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand logoFont" href="#"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
+            <a class="navbar-brand logoFont" href="index.html"><img src="img/wht-android-chrome-192x192.png" class="d-inline-block align-bottom" 
                 alt="mark" width="30" height="30"> REVERSAL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,23 +59,24 @@
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col">
                     <h1 class="display-5 fw-bold lh-1 mb-3">
-                        REVERSAL: A CODING PROJECT
+                        <span class="logoFont">REVERSAL</span>: A CODING PROJECT
                     </h1>
                     <h4 class="lead pb-3">
-                        There and back again. A javascript coding exercise using arrawys. Write a program that displays a string in reverse. 
+                        Sometimes it helps to work backwards. A javascript coding exercise using arrays. Write a program that 
+                        takes a string from the user and presents the string back to the user in reverse.
                     </h4>
                 </div>
                 <div class="col">
-                    <h5 class="border-1 border-bottom border-danger">Enter a String to Reverse</h5>
+                    <h5 class="border-1 border-bottom border-success">Enter a String to Reverse</h5>
                     <form class="row gx-3 gy-2">
                         <div class="col">
                             <input id="userString" type="text" class="form-control" placeholder="Enter a string..." aria-label="Enter a string">
                         </div>
                         <div class="col-12">
-                            <button type="button" id="submit" class="btn btn-danger">Reverse it!</button>
+                            <button type="button" id="submit" class="btn btn-success">Reverse it!</button>
                         </div>
-                        <div class="alert alert-danger mt-5 invisible fade show" id="alert" role="alert">
-                            <h4 class="alert-heading">Reversal Complete.</h4>
+                        <div class="alert alert-success mt-5 invisible fade show" id="alert" role="alert">
+                            <h4 class="alert-heading"><span class="logoFont">REVERSAL</span> Complete.</h4>
                             <hr>
                             <p class="mb-0" id="msg">
                                 <!-- Insert message here. -->
@@ -106,6 +112,9 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
     <script src="js/site.js"></script>
+    <script>
+        document.getElementById("submit").addEventListener("click",getUserString);
+    </script>
 </body>
 
 </html>
